connesct to two databases

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
 <%include partials/header.ejs%>
 <h1>Hello World</h1>
+<h1><%=first_name2%></h1>
+<img src="<%=image%>" alt="">
 <%include partials/footer.ejs%>
