--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/assests/css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="/assests/css/lib/semantic.min.css">
     <script src="assests/js/lib/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 </head>
 <body>
     
