--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,11 @@
 <style>
 #navbar{
     height:50px;
+    width: 100%;
+    background-color: white;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.233);
+    position: fixed;
+    z-index: 5000;
 }
 #pic{
     width:40px;
