--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -29,6 +29,9 @@
     label {
         transition: 150ms;
     }
+    .form-check{
+        margin:15px 0;
+    }
 </style>
 <div class="container">
 
@@ -60,6 +63,10 @@
                     <input type="password" class="form-control" id="confirm_password" name="confirm_password"
                         placeholder="Confirm password">
                 </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="checkbox">
+                    <label class="form-check-label" for="checkbox">I agree to <a href="/privacy">terms and conditions</a></label>
+                </div>
                 <button class="btn btn-primary btn-block">Sign up</button>
             </form>
         </div>
@@ -77,7 +84,7 @@
     });
     if ($('.alert').text() == "account added") {
         $('.alert').removeClass('alert-danger');
-        $('.alert').addClass('alert-info');
+        $('.alert').addClass('alert-warning');
     }
 
 
