--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,8 @@
 <div id="navbar">
+    <div class="float-right">
 <img id="pic" src="https://assets.capitalfm.com/2018/23/lilliya-scarlett-instagram-1528814125-custom-0.png" alt="">
+<a href="/sign_up"><button class="btn btn-warning">Sign up</button></a>
+</div>
 
 </div>
 <style>
@@ -9,12 +12,13 @@
     background-color: white;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.233);
     position: fixed;
+    top: 0;
     z-index: 5000;
 }
 #pic{
     width:40px;
     border-radius: 100%;
-    float:right;
+    
     margin-top: 5px;
     margin-right: 40px
 }
