--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <%include partials/header.ejs%>
 <%include partials/navbar.ejs%>
 
-
+<div class="fb-like" data-share="true" data-width="450" data-show-faces="true">
+</div>
 
 
 
