--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,12 @@
 <%include partials/header.ejs%>
 <%include partials/navbar.ejs%>
-
-<div class="fb-like" data-share="true" data-width="450" data-show-faces="true">
+<div class="container" style="margin-top:200px;">
+<%include partials/post.ejs%>
 </div>
 
 
 
 <%include partials/footer.ejs%>
+
+<!-- <div class="fb-like" data-share="true" data-width="450" data-show-faces="true">
+</div> -->
