--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -77,7 +77,7 @@
 <%include partials/footer.ejs%>
 
 
-<SCRIPT>
+<script>
     var inputs_id = ['first_name', 'last_name', 'password', 'confirm_password'];
     inputs_id.forEach(function (i) {
         $('#' + i).focus(function () { $('label[for=' + i + ']').addClass('label_on_focus') })
@@ -89,4 +89,6 @@
     }
 
 
-</SCRIPT>
+
+    
+</script>
